--- a/yolov5_person_counting/requirements.txt
+++ b/yolov5_person_counting/requirements.txt
@@ -11,7 +11,7 @@ requests>=2.23.0
 scipy>=1.4.1
 torch>=1.7.0
 torchvision>=0.8.1
-tqdm==4.8.2
+tqdmtqdm>=4.41.0
 protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
 
 # Logging -------------------------------------
